2020-11-23  b606  <7627533+b606@users.noreply.github.com>

	* packages.config:
	* RimWorld_LanguageWorker_French.csproj: Update to libHarmony
	2.0.4 and NET framework 4.7.2

2020-10-30  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Fix incorrect gender texts in
	GameConditions, ex. in psychic drones, where there is no way
	to use {XXX_gender ? : }.

2020-10-30  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Changed the char code for
	permanently suppress elision to '\200C' (zero-width non joiner
	space) in both WithDefiniteArticle() and
	WithIndefiniteArticle().

2020-10-29  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Fix: ReGex elisions for "(à|À)
	<tag>le(s?) " separated with a text color tag should work
	properly.

	* packages.config:
	* RimWorld_LanguageWorker_French.csproj: Lib.Harmony updated
	to version 2.0.3.

2020-09-26  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Update to version 1.2.
	First names starting with 'H' or short names starting with
	a vowel do not require elision. Ex. "le chapeau de Anne" or
	"le chapeau de Hector" instead of "le chapeau d'Anne" or
	"le chapeau d'Hector".

2020-05-11  b606  <7627533+b606@users.noreply.github.com>

	* RimWorld_LanguageWorker_French.csproj: Update project files
	to define and use $(RimWorldFolder), $(RimWorldReferences) and
	$(ModsFolder) depending on the detected $(OS).

2020-05-07  b606  <7627533+b606@users.noreply.github.com>

	* Patcher.cs: Move Log file from libHarmony FileLog to
	LanguageWorker_French log.

2020-05-07  b606  <7627533+b606@users.noreply.github.com>

	* RimWorld_LanguageWorker_French.csproj: Customized build
	process with targets InstallModOnUnix and InstallModOnWindows

2020-05-07  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Clean out debugging code

2020-05-05  b606  <7627533+b606@users.noreply.github.com>
